syntax = "proto3";
package com.example.auth;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.example.auth.api.generated";
option java_outer_classname = "AuthClass";

service AuthenticationService {
  rpc Authenticate(AuthenticationRequest) returns (AuthenticationResponse);
  rpc ResetToken(AuthenticationRequest) returns (AuthenticationResponse);
}

message AuthenticationRequest {
    string username = 1;
    string password = 2;
}

message AuthenticationResponse {
    bool authorized = 1;
    google.protobuf.Timestamp expiredAt = 2;
    string token = 3;
}