syntax = "proto3";
package auth;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.example.auth.api.generated";
option java_outer_classname = "Authorizer";

service AuthorizeService {
  rpc Authorize(AuthorizeRequest) returns (AuthorizeResponse);
}

message AuthorizeRequest {
    string token = 1;
    google.protobuf.Timestamp expiredAt = 2;
}

message AuthorizeResponse {
    bool authorized = 1;
    google.protobuf.Timestamp expiredAt = 2;
    string token = 3;
}